fix whitespace interpretation issue, line things up for real

--- a/css/trackers.scss
+++ b/css/trackers.scss
@@ -205,8 +205,8 @@ body {
             }
         }
 
-        .site-info__https-status-msg {
-            margin-left: 3.5px;
+        .site-info__https-status {
+            margin-right: 7px;
         }
 
         .site-info__tracker-count {
